# gw2alerts

./: Cargo.toml  config.toml
src/: main.rs
