[package]
name = "gw2alerts"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.37.0", features = ["full"]}
serenity = {version = "0.12.1", features = ["rustls_backend", "model"], default-features = false}
serde = {version = "*", features = ["derive"]}
toml = "*"
chrono = "0.4.38"
